<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_activity_routes_filter"
          android:title="@string/action_activity_routes_filter"
          app:showAsAction="never"
        />

    <item android:id="@+id/action_activity_routes_break"
          android:title="@string/action_activity_routes_break"
          app:showAsAction="never">

        <menu>
            <item android:id="@+id/action_activity_routes_pause_break"
                  android:title="@string/action_activity_routes_pause_break" />

            <item android:id="@+id/action_activity_routes_product_break"
                  android:title="@string/action_activity_routes_product_break" />
        </menu>
    </item>

    <item android:id="@+id/action_activity_routes_exit"
          android:title="@string/action_activity_routes_exit"
          app:showAsAction="never"/>
</menu>