<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center">

    <TextView
            android:text="@string/label_activity_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
                android:text="@string/label_activity_login_username"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/input_activity_login_username"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
                android:text="@string/label_activity_login_password"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/input_activity_login_password"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
            android:id="@+id/action_activity_login_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_ok"
            android:padding="5dp"
            android:layout_marginTop="30dp"/>

</LinearLayout>